2012-01-13  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* NEWS: added what's new in this release.
	* README: updated new features.
	* INSTALL: updated versions and added more information about 
	--with-hdfeo2 option.
	* hdf4_handler.cf.spec: added for those who are interested in building
	custom RPM using --with-hdfeos2 option.

2012-01-12  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>
	
	* HE2CF.cc (print_attr): fixed bug for uint16/uint32 type handling.
	* hdfdesc.cc (print_attr): fixed bug for uint16/uint32 type handling.


2012-01-11  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* HDFEOS2.cc: fixed the bug for LAMAZ visualization anomaly.

2012-01-10  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* Makefile.am: added hdfdesc.h

2012-01-10  hyoklee

	added the missing file that caused RPM build failure with
	--with-hdfeos2 option.

2012-01-09  James Gallagher <jgallagher@opendap.org>

	Code review.

2012-01-09  hyoklee

	Corrected scale/offset for MODIS products. Added LAMAZ/SOM
	projection support. See ChangeLog for details.

2012-01-09  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* configure.ac: changed version number to 3.9.4.
	* hdf4_handler.spec: changed version number to 3.9.4.
	* hdfesc.cc: improved MODIS scale/offset handling and OBPG support.
	* hdfdesc.h: added for MODIS and MISR product support.
	* HDEEOPS2ArrayGridGeoField.cc: added SOM projection support.
	* HDEEOPS2ArrayGridGeoField. (CalculateSpeLatLon)h: renamed to
	CalculateLAMAZLatLon().
	* HDFEOS2Array_RealField.cc: corrected scale/offset application in
	MODIS products.
	* HDFEOS2ArraySwathDimMapField.cc: corrected scale/offset application in
	MODIS products.
	* Makefile.am: added files for MISR product support.
	* misr_init.cc, misrinv.cc, misrproj.h, errormacros.h: added.

2012-01-06  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* HE2CFUniqName.cc (set_uniq_name): removed exit(-1) function.

2011-12-22  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>